FIX 135676 Only integrated-ul.data are overfow:hidden, otherwise this may truncate some position: absolute global popups

--- a/skins/default/output_properties.scss
+++ b/skins/default/output_properties.scss
@@ -127,7 +127,7 @@ article > form, article {
 		}
 	}
 
-	ul.data {
+	ul.data ul.data {
 		// allow li with float and clear
 		overflow: hidden;
 	}
